--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -202,15 +202,11 @@
           background: rgba(255,255,255,0.9);
 					line-height: 22px;
 					max-height: 300px;
+					overflow-y: scroll;
 					.fatal { color: #ff0000; }
 
         }
-        .showerrorbox:hover ~ .errorbox, .errorbox:hover {
-            //display: inline;
-            opacity: 1;
-            z-index: 10;
 
-        }
      }
 
      .processor-paused
@@ -771,6 +767,14 @@
             background: #1FBEC9;
 
           }
+					label {
+						input[type="checkbox"]
+						{
+							 margin-right: 8px;
+						}
+
+					}
+
         }
       }
 
