--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -185,15 +185,16 @@
   color: #fff;
   text-transform: uppercase;
 }
-.settings_page_wp-shortpixel-settings .view-notice {
+.settings_page_wp-shortpixel-settings .view-notice, .settings_page_wp-shortpixel-settings .compression-notice {
   box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
   border: 4px solid #fff;
   padding: 1px 12px;
 }
-.settings_page_wp-shortpixel-settings .view-notice p {
+.settings_page_wp-shortpixel-settings .view-notice p, .settings_page_wp-shortpixel-settings .compression-notice p {
   margin: 1em 0 !important;
+  line-height: 12px;
 }
-.settings_page_wp-shortpixel-settings .view-notice.warning {
+.settings_page_wp-shortpixel-settings .view-notice.warning, .settings_page_wp-shortpixel-settings .compression-notice.warning {
   border-left-color: #ffb900;
 }
 .settings_page_wp-shortpixel-settings .view-notice-row {
