--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -146,7 +146,7 @@
 
 
   /* In-view notice ( not on top, between the options ) - styled after WP notice */
-  .view-notice
+  .view-notice, .compression-notice
   {
 
     box-shadow: 0 1px 1px 0 rgba( 0, 0, 0, 0.1 );
@@ -155,6 +155,8 @@
     padding: 1px 12px;
     p {
       margin: 1em 0 !important;
+ 			line-height: 12px;
+
     }
     &.warning
     {
