--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -1,68 +1,3 @@
-/* Specific styles for advanced settings tab */
-#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder {
-  margin: 10px 0;
-}
-#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder .add-folder-text {
-  margin-left: 5px;
-}
-#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[type=text] {
-  width: 50em;
-  max-width: 70%;
-}
-#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[name=saveAdv] {
-  margin-left: 8px;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list {
-  display: table;
-  border-collapse: separate;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div.heading {
-  width: auto;
-  display: table-header-group;
-  padding: 12px 16px 12px 12px;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div.heading span {
-  font-weight: 600;
-  font-size: 14px;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div {
-  display: table-row;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div > span {
-  display: table-cell;
-  padding: 5px 10px;
-  vertical-align: middle;
-  background-color: #eee;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div > span.action {
-  background-color: unset;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list .refresh-folder {
-  text-decoration: none;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list .info-icon {
-  cursor: pointer;
-}
-
-.cf_switch label {
-  width: 100%;
-  margin: 0 -2px;
-  background-color: #e2faff;
-  display: inline-block;
-}
-.cf_switch label span {
-  padding: 8px 0px 8px 15px;
-  display: block;
-  font-size: 13px;
-}
-.cf_switch label input {
-  display: none;
-}
-.cf_switch label input:checked + span {
-  background-color: #0085ba;
-  color: #F7F7F7;
-}
-
 .settings_page_wp-shortpixel-settings {
   /* In-view notice ( not on top, between the options ) - styled after WP notice */
 }
@@ -192,13 +127,97 @@
 }
 .settings_page_wp-shortpixel-settings .view-notice p, .settings_page_wp-shortpixel-settings .compression-notice p {
   margin: 1em 0 !important;
-  line-height: 12px;
+}
+.settings_page_wp-shortpixel-settings .view-notice h4, .settings_page_wp-shortpixel-settings .compression-notice h4 {
+  margin: 0;
+  font-size: 16px;
 }
 .settings_page_wp-shortpixel-settings .view-notice.warning, .settings_page_wp-shortpixel-settings .compression-notice.warning {
   border-left-color: #ffb900;
 }
+.settings_page_wp-shortpixel-settings .compression-notice {
+  margin-top: -20px;
+}
 .settings_page_wp-shortpixel-settings .view-notice-row {
   display: none;
+}
+
+/* Specific styles for advanced settings tab */
+#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder {
+  margin: 10px 0;
+}
+#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder .add-folder-text {
+  margin-left: 5px;
+}
+#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[type=text] {
+  width: 50em;
+  max-width: 70%;
+}
+#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[name=saveAdv] {
+  margin-left: 8px;
+}
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list {
+  display: table;
+  border-collapse: separate;
+}
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div.heading {
+  width: auto;
+  display: table-header-group;
+  padding: 12px 16px 12px 12px;
+}
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div.heading span {
+  font-weight: 600;
+  font-size: 14px;
+}
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div {
+  display: table-row;
+}
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div > span {
+  display: table-cell;
+  padding: 5px 10px;
+  vertical-align: middle;
+  background-color: #eee;
+}
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div > span.action {
+  background-color: unset;
+}
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list .refresh-folder {
+  text-decoration: none;
+}
+#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list .info-icon {
+  cursor: pointer;
+}
+
+.cf_switch label {
+  width: 100%;
+  margin: 0 -2px;
+  background-color: #e2faff;
+  display: inline-block;
+}
+.cf_switch label span {
+  padding: 8px 0px 8px 15px;
+  display: block;
+  font-size: 13px;
+}
+.cf_switch label input {
+  display: none;
+}
+.cf_switch label input:checked + span {
+  background-color: #0085ba;
+  color: #F7F7F7;
+}
+
+#tab-tools .option {
+  width: 80%;
+  max-width: 500px;
+  padding: 8px;
+  margin: 25px 0;
+}
+#tab-tools .option .button {
+  margin: 10px 8px;
+}
+#tab-tools .danger-zone {
+  border: 1px solid #ff0000;
 }
 
 .view-edit-media a.debugModal {
