--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -1,8 +1,9 @@
 
-
+@import 'view/settings';
 @import 'view/settings-advanced';
 @import 'view/settings-cloudflare';
-@import 'view/settings';
+@import 'view/settings-tools';
+
 @import 'view/edit-media';
 @import 'view/other-media';
 @import 'view/list-item';
