--- a/res/scss/view/_settings-cloudflare.scss
+++ b/res/scss/view/_settings-cloudflare.scss
@@ -10,6 +10,7 @@
   //	font-weight: 700;
   	display: inline-block;
   //  font-size: 13px;
+		//cursor: default;
 
     span
     {
@@ -29,4 +30,19 @@
       color:#F7F7F7;
     }
   }
+
+	&.global-hidden
+	{
+		label {
+			 cursor: default;
+		}
+	  input:checked + span
+		{
+			 background-color: #fff;
+			 color: #000;
+			 padding-left: 0;
+		}
+
+	}
+
 }
