--- a/res/scss/shortpixel-bulk.scss
+++ b/res/scss/shortpixel-bulk.scss
@@ -29,6 +29,7 @@
 
 
 
+
     p.description
     {
        font-size: 14px;
@@ -43,7 +44,29 @@
 			.button {
 				margin-right: 8px;
 				padding: 8px 16px;
+				background: #F5F5F5;
+				color: #1FBEC9;
+				letter-spacing: 0.3px;
+				font-weight: 700;
+				font-size: 14px;
+				.dashicons
+				{
+					 font-size: 26px;
+					 height: 26px;
+					 margin-right: 6px;
+					 padding-top: 2px;
+				}
 			}
+      .button-primary
+      {
+        margin-left: 15px;
+        background: #1FBEC9;
+        color: #fff;
+        border: 1px solid #1FBEC9;
+        border-radius: 3px;
+        box-shadow: 0px 1px 1px rgba(171, 170, 170, 0.3);
+      }
+
     }
 
     .hidden {
@@ -277,19 +300,26 @@
             button
             {
                color: #ffffff;
-               background: #1FB5BF;
+               background: linear-gradient(to left, #136970, #1FB5BF);
                border-radius: 3px;
-               width: 200px;
-               height: 45px;
+               width: 250px;
+               height: 65px;
                font-size: 13px;
                line-height: 21px;
-               transition: all 0.2s linear;
+               transition: all 0.5s linear;
+							 font-weight: 700;
+							 font-size: 16px;
+							 letter-spacing: 0.3px;
+							 border: 1px solid #ccc;
 
                &:hover
                {
-                  background: #50d9e2;
+                //  background: linear-gradient(to left, #3b9ea5, #50d9e2);
+									background:  #50d9e2;
                   font-weight: 600;
-          //        transition: all 1s linear;
+                  transition: all 1s linear;
+								//	color: #000;
+				//	transition: all 0.5s linear;
                }
                &:disabled {
                  color: #ccc;
@@ -336,7 +366,7 @@
             }
 						&.custom
 						{
-						
+
 						}
           }
        }
@@ -486,9 +516,25 @@
          }
       }
 
+			.option-block
+			{
+				 margin: 0 auto 35px;
+				 width: 80%;
+				 h2 {
+					 	font-size: 22px;
+						color: #555;
+				 }
+				 p { margin-left: 0; }
+
+				 &.selection-settings
+				 {
+				 			.option, label { font-size: 13px; }
+				 }
+			}
+
       .optiongroup
       {
-         margin-left: 15px;
+         //margin-left: 15px;
          .switch_button {
             display: inline-block;
          }
@@ -510,6 +556,7 @@
                font-weight: 700;
            }
         }
+
       }
 
     } // panel
@@ -610,6 +657,7 @@
           display: table;
           margin: 35px 0 35px 25px;
           width: 50%;
+					margin-left: 10%;
           > p { display: table-row }
           > p > span {
              display: table-cell;
@@ -656,26 +704,7 @@
           padding: 16px;
           font-weight: 500;
       }
-      nav {
-        margin: 45px auto;
-        width: 80%;
-        .button
-        {
-          background: #F5F5F5;
-          color: #1FBEC9;
-          padding: 4px 16px;
-        }
-        .button-primary
-        {
-          padding: 4px 16px;
-          margin-left: 15px;
-          background: #1FBEC9;
-          color: #fff;
-          border: 1px solid #1FBEC9;
-          border-radius: 3px;
-          box-shadow: 0px 1px 1px rgba(171, 170, 170, 0.3);
-        }
-      }
+
     } // panel
 
     section.panel.process, section.panel.finished
