--- a/res/css/shortpixel-bulk.css
+++ b/res/css/shortpixel-bulk.css
@@ -210,7 +210,7 @@
 }
 .shortpixel-bulk-wrapper .processor-paused {
   display: none;
-  top: 0;
+  margin: 25px 0;
   width: 90%;
   background: #1fbec9;
   border: 1px solid #ccc;
@@ -236,6 +236,26 @@
 }
 .shortpixel-bulk-wrapper .processor-paused .dashicons:hover::before {
   content: "";
+}
+.shortpixel-bulk-wrapper .processor-overquota {
+  display: none;
+  background: #ff0000;
+  line-height: 26px;
+  padding: 20px 0;
+  border-radius: 12px;
+  margin: 25px 0;
+  width: 90%;
+  text-align: center;
+}
+.shortpixel-bulk-wrapper .processor-overquota h3 {
+  font-size: 26px;
+  color: #fff;
+  margin: 10px 0;
+}
+.shortpixel-bulk-wrapper .processor-overquota p a {
+  font-size: 16px;
+  color: #fff;
+  text-decoration: none;
 }
 .shortpixel-bulk-wrapper section.panel.dashboard h3.heading {
   border: 0;
