--- a/res/css/shortpixel-othermedia.css
+++ b/res/css/shortpixel-othermedia.css
@@ -128,6 +128,7 @@
 }
 .shortpixel-other-media .list-overview .item .sp-column-info {
   max-width: 400px;
+  width: 100%;
   min-width: 250px;
   display: inline-block;
   position: relative;
@@ -139,7 +140,7 @@
 }
 .shortpixel-other-media .list-overview .item .sp-column-info .sp-column-actions {
   position: absolute;
-  right: -10px;
+  right: 15px;
   top: 0;
 }
 @media (max-width: 1250px) {
