--- a/res/scss/shortpixel-othermedia.scss
+++ b/res/scss/shortpixel-othermedia.scss
@@ -178,16 +178,18 @@
          }
          .sp-column-info {
            max-width: 400px;
+					 width: 100%;
            min-width: 250px;
            display: inline-block;
 					 position: relative;
+
            @media(max-width: 1550px) {
                width: auto;
            }
 					 .sp-column-actions
 					 {
 						  position: absolute;
-							right: -10px;
+							right: 15px;
 							top: 0;
 					 }
          }
