Fix for image size in debug Fix for debug thumbnail status

--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -261,6 +261,9 @@
   display: inline-block;
   min-width: 200px;
 }
+.shortpixel-modal-active .debug-modal.debugInfo ul li img {
+  max-height: 150px;
+}
 .shortpixel-modal-active .debug-modal.debugInfo .green {
   color: green;
 }
