--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -6,6 +6,10 @@
   {
     font-size: 18px;
     a { font-size: 18px; }
+		.quota-remaining
+		{
+			 float: right; 
+		}
   }
 
   .wp-shortpixel-tab-content
