--- a/res/css/short-pixel.css
+++ b/res/css/short-pixel.css
@@ -180,7 +180,9 @@ div.wrap.short-pixel-bulk-page .bulk-notice-msg img {
     margin-right: 5px;
 }
 div.sp-bulk-summary {
-    float:right;
+    position: absolute;
+		top: 10px;
+		right: 10px;
     margin:8px 5px 3px 20px;
 }
 .sp-notice .bulk-error-show {
