--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -1,236 +1,3 @@
-.settings_page_wp-shortpixel-settings {
-  /* In-view notice ( not on top, between the options ) - styled after WP notice */
-}
-.settings_page_wp-shortpixel-settings .top-menu {
-  font-size: 18px;
-}
-.settings_page_wp-shortpixel-settings .top-menu a {
-  font-size: 18px;
-}
-.settings_page_wp-shortpixel-settings .top-menu .quota-remaining {
-  float: right;
-}
-.settings_page_wp-shortpixel-settings .wp-shortpixel-tab-content {
-  transition: all 1000ms linear;
-}
-.settings_page_wp-shortpixel-settings .red {
-  color: #ff0000;
-}
-.settings_page_wp-shortpixel-settings article.sp-tabs section .wp-shortpixel-tab-content {
-  opacity: 0;
-}
-.settings_page_wp-shortpixel-settings article.sp-tabs section.sel-tab .wp-shortpixel-tab-content {
-  opacity: 1;
-}
-.settings_page_wp-shortpixel-settings article.sp-tabs section h2 {
-  position: absolute;
-  font-size: 1.3em;
-  font-weight: normal;
-  width: 180px;
-  height: 1.8em;
-  top: -1.8em;
-  left: 10px;
-  padding: 0;
-  margin: 0;
-  color: #999;
-  background-color: #ddd;
-  /* border-radius: 5px 5px 0 0; */
-}
-.settings_page_wp-shortpixel-settings article.sp-tabs section h2 a {
-  display: block;
-  width: 100%;
-  line-height: 1.8em;
-  text-align: center;
-  text-decoration: none;
-  color: #23282d;
-  outline: 0 none;
-}
-.settings_page_wp-shortpixel-settings article.sp-tabs section:nth-child(2) h2 {
-  left: 192px;
-}
-.settings_page_wp-shortpixel-settings article.sp-tabs section:nth-child(3) h2 {
-  left: 374px;
-}
-.settings_page_wp-shortpixel-settings article.sp-tabs section:nth-child(4) h2 {
-  left: 556px;
-}
-.settings_page_wp-shortpixel-settings article.sp-tabs section:nth-child(5) h2 {
-  left: 738px;
-}
-.settings_page_wp-shortpixel-settings article.sp-tabs section:nth-child(6) h2 {
-  left: 920px;
-}
-.settings_page_wp-shortpixel-settings section#tab-debug .flex {
-  display: flex;
-}
-.settings_page_wp-shortpixel-settings section#tab-debug .env .flex {
-  flex-wrap: wrap;
-  max-width: 450px;
-}
-.settings_page_wp-shortpixel-settings section#tab-debug .env .flex span {
-  width: 45%;
-  padding: 4px;
-}
-.settings_page_wp-shortpixel-settings section#tab-debug .table {
-  display: table;
-}
-.settings_page_wp-shortpixel-settings section#tab-debug .table > div {
-  display: table-row;
-}
-.settings_page_wp-shortpixel-settings section#tab-debug .table > div > span {
-  display: table-cell;
-}
-.settings_page_wp-shortpixel-settings section#tab-debug .table > div.head > span {
-  font-weight: 700;
-}
-.settings_page_wp-shortpixel-settings section#tab-debug .table.notices > div > span {
-  width: 25%;
-  text-align: center;
-}
-.settings_page_wp-shortpixel-settings section.banner {
-  width: 100%;
-  background-color: #dcfdff;
-  display: flex;
-  align-items: center;
-  border: 1px solid #ccc;
-  margin-top: 35px;
-  margin-bottom: 45px;
-  z-index: 12;
-  position: relative;
-  opacity: 0;
-}
-.settings_page_wp-shortpixel-settings section.banner span {
-  text-align: center;
-}
-.settings_page_wp-shortpixel-settings section.banner .image {
-  flex: 1;
-}
-.settings_page_wp-shortpixel-settings section.banner .line {
-  flex: 3;
-}
-.settings_page_wp-shortpixel-settings section.banner .line h3 {
-  color: #00d0e5;
-}
-.settings_page_wp-shortpixel-settings section.banner .button-wrap {
-  flex: 2;
-}
-.settings_page_wp-shortpixel-settings section.banner .button-wrap .button {
-  background: #ff0000;
-  padding: 8px;
-  font-weight: 700;
-  font-size: 20px;
-  margin: 8px;
-  color: #fff;
-  text-transform: uppercase;
-}
-.settings_page_wp-shortpixel-settings .view-notice, .settings_page_wp-shortpixel-settings .compression-notice {
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-  border: 4px solid #fff;
-  padding: 1px 12px;
-}
-.settings_page_wp-shortpixel-settings .view-notice p, .settings_page_wp-shortpixel-settings .compression-notice p {
-  margin: 1em 0 !important;
-}
-.settings_page_wp-shortpixel-settings .view-notice h4, .settings_page_wp-shortpixel-settings .compression-notice h4 {
-  margin: 0;
-  font-size: 16px;
-}
-.settings_page_wp-shortpixel-settings .view-notice.warning, .settings_page_wp-shortpixel-settings .compression-notice.warning {
-  border-left-color: #ffb900;
-}
-.settings_page_wp-shortpixel-settings .compression-notice {
-  margin-top: -20px;
-}
-.settings_page_wp-shortpixel-settings .view-notice-row {
-  display: none;
-}
-
-/* Specific styles for advanced settings tab */
-#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder {
-  margin: 10px 0;
-}
-#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder .add-folder-text {
-  margin-left: 5px;
-}
-#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[type=text] {
-  width: 50em;
-  max-width: 70%;
-}
-#shortpixel-settings-tabs #tab-adv-settings .addCustomFolder input[name=saveAdv] {
-  margin-left: 8px;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list {
-  display: table;
-  border-collapse: separate;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div.heading {
-  width: auto;
-  display: table-header-group;
-  padding: 12px 16px 12px 12px;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div.heading span {
-  font-weight: 600;
-  font-size: 14px;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div {
-  display: table-row;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div > span {
-  display: table-cell;
-  padding: 5px 10px;
-  vertical-align: middle;
-  background-color: #eee;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list div > span.action {
-  background-color: unset;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list .refresh-folder {
-  text-decoration: none;
-}
-#shortpixel-settings-tabs #tab-adv-settings .shortpixel-folders-list .info-icon {
-  cursor: pointer;
-}
-
-.cf_switch label {
-  width: 100%;
-  margin: 0 -2px;
-  background-color: #e2faff;
-  display: inline-block;
-}
-.cf_switch label span {
-  padding: 8px 0px 8px 15px;
-  display: block;
-  font-size: 13px;
-}
-.cf_switch label input {
-  display: none;
-}
-.cf_switch label input:checked + span {
-  background-color: #0085ba;
-  color: #F7F7F7;
-}
-.cf_switch.global-hidden label {
-  cursor: default;
-}
-.cf_switch.global-hidden input:checked + span {
-  background-color: #fff;
-  color: #000;
-  padding-left: 0;
-}
-
-#tab-tools .option {
-  width: 80%;
-  max-width: 500px;
-  padding: 8px;
-  margin: 25px 0;
-}
-#tab-tools .option .button {
-  margin: 10px 8px;
-}
-#tab-tools .danger-zone {
-  border: 1px solid #ff0000;
-}
-
 .view-edit-media a.debugModal {
   margin: 20px 0;
   display: inline-block;
@@ -519,6 +286,66 @@ body.debug-model-active {
 
 .shortpixel-hide {
   display: none;
+}
+
+.switch_button {
+  line-height: 12px;
+  margin: 10px -5px;
+}
+.switch_button label {
+  padding: 8px 5px;
+}
+.switch_button label:focus {
+  outline: none;
+}
+.switch_button input {
+  display: none;
+}
+.switch_button input:checked ~ .the_switch {
+  background: #1fbec9;
+}
+.switch_button input:checked ~ .the_switch:after {
+  left: 20px;
+  background: #1caecb;
+}
+.switch_button input:disabled ~ .the_switch {
+  background: #d5d5d5;
+  pointer-events: none;
+}
+.switch_button input:disabled ~ .the_switch:after {
+  background: #bcbdbc;
+}
+.switch_button .the_switch {
+  margin: 8px 15px 8px 0;
+  position: relative;
+  display: inline-block;
+  height: 10px;
+  width: 40px;
+  background: #cccccc;
+  border-radius: 100px;
+  cursor: pointer;
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.25) !important;
+}
+.switch_button .the_switch:after {
+  position: absolute;
+  left: -2px;
+  top: -4px;
+  display: block;
+  width: 20px;
+  height: 20px;
+  border-radius: 100px;
+  background: #aaa;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.31);
+  content: "";
+  -webkit-transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
+  -o-transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
+  transition: left 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275), padding 0.5s ease, margin 0.5s ease !important;
+}
+.switch_button .the_switch:active:after {
+  transform: scale(0.9, 0.85);
+}
+.switch_button .the_switch:focus {
+  outline: none;
 }
 
 /*# sourceMappingURL=shortpixel-admin.css.map */
