--- a/res/scss/view/_settings.scss
+++ b/res/scss/view/_settings.scss
@@ -8,7 +8,7 @@
     a { font-size: 18px; }
 		.quota-remaining
 		{
-			 float: right; 
+			 float: right;
 		}
   }
 
@@ -55,6 +55,12 @@
           outline: 0 none;
       }
     }
+		section.sel-tab h2
+		{
+			color: #333;
+			background-color: #fff;
+			z-index: 2;
+		}
   }
 
   article.sp-tabs section:nth-child(2) h2 {
@@ -117,7 +123,7 @@
      border: 1px solid #ccc;
      margin-top: 35px;
      margin-bottom: 45px;
-     z-index: 12;
+
      position: relative;
      opacity: 0;
 
