Second attempt to have nice help thingies

--- a/res/css/shortpixel-admin.css
+++ b/res/css/shortpixel-admin.css
@@ -291,6 +291,7 @@ body.debug-model-active {
 .switch_button {
   line-height: 12px;
   margin: 10px -5px;
+  display: inline-block;
 }
 .switch_button label {
   padding: 8px 5px;
