--- a/res/scss/shortpixel-admin.scss
+++ b/res/scss/shortpixel-admin.scss
@@ -18,6 +18,7 @@
 //	margin-left: -5px;
 	line-height: 12px;
 	margin: 10px -5px ;
+	display: inline-block;
 
 	label{
 		padding: 8px 5px; // this padding to make clicking more flexible ( bigger hitbox )
